[package]
name = "wobbling-statistics"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93" }
clap = { version = "4.5.20", features = ["derive", "wrap_help"] }
indicatif = { version = "0.17.8" }
indoc = { version = "2.0.5" }
plotly = { version = "0.10.0", features = ["kaleido"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
ureq = { version = "2.10.1", features = ["json"] }
